--- a/ios-example/ios-example/Info.plist
+++ b/ios-example/ios-example/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>oiehrovd</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>cvsrv</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
